--- a/src/app/components/task-form/task-form.component.html
+++ b/src/app/components/task-form/task-form.component.html
@@ -1,1 +1,20 @@
-<p>task-form works!</p>
+<div class="card">
+    <div class="card-body">
+        <form (submit)="addTask(newTitle, newDescription)">
+            <div class="form-group pb-3">
+                <input type="text" 
+                    class="form-control"
+                     placeholder="Task title"
+                     #newTitle>
+            </div>
+            <div class="form-group">
+                <textarea cols="30" rows="10" 
+                    class="form-control"
+                    placeholder="Task description"
+                    #newDescription>
+                </textarea>
+            </div>
+            <button class="btn btn-primary btn-block">Send</button>
+        </form>
+    </div>
+</div>
